fix translations menu on mobile

--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -164,3 +164,7 @@ body {
 .VPLink,.VPMenu .trans-title {
   color: #000 !important;
 }
+
+.VPNavScreenTranslations .title {
+  color: #000;
+}
